--- a/backend/package.json
+++ b/backend/package.json
@@ -4,11 +4,14 @@
   "description": "its me hi im the problem its me",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.ts"
+    "start": "nodemon index.ts",
+    "migrate": "cd ./src/database/sequelize && sequelize-cli db:migrate",
+    "generate": "cd ./src/database/sequelize &&sequelize-cli migration:generate --name"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/node": "^18.15.9",
     "sequelize-cli": "^6.6.0",
@@ -16,8 +19,10 @@
     "typescript": "^5.0.2"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "joi": "^17.9.1",
     "mysql2": "^3.2.0",
     "nodemon": "^2.0.22",
     "sequelize": "^6.30.0"
