--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
+    "sass": "^1.62.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -52,6 +53,7 @@
     ]
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.191"
+    "@types/lodash": "^4.14.191",
+    "tailwindcss": "^3.3.1"
   }
 }
