--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,15 @@
 version: "3.8"
 
+#uncomment all volume-related lines to update code live
 services:
   frontend:
-    # depends_on:
-    #   - backend
+    depends_on:
+      - backend
     build: ./frontend
     ports:
       - 3000:3000
-    volumes:
-      - ./frontend:/app
+    # volumes:
+    #   - ./frontend:/app
 
   backend:
     depends_on:
@@ -17,8 +18,8 @@ services:
     command: sh -c 'until nc -z db 3306; do sleep 1; done; npm run migrate; npm run seed:run; npm start;'
     ports:
       - 8000:8000
-    volumes:
-      - ./backend:/app
+    # volumes:
+    #   - ./backend:/app
 
   db:
     image: mariadb:10.7
@@ -35,5 +36,5 @@ services:
 
 volumes:
   db_data:
-  frontend:
-  backend:
+  # frontend:
+  # backend:
