--- a/backend/package.json
+++ b/backend/package.json
@@ -1,22 +1,29 @@
 {
   "name": "node-with-ts",
   "version": "1.0.0",
-  "description": "its me hi im the problem its me",
-  "main": "index.js",
+  "description": "Shopping Boddy Backend",
+  "main": "index.ts",
   "scripts": {
     "start": "nodemon index.ts",
     "migrate": "cd ./src/database/sequelize && sequelize-cli db:migrate",
     "generate": "cd ./src/database/sequelize &&sequelize-cli migration:generate --name",
     "seed": "cd ./src/database/sequelize &&sequelize-cli seed:generate --name",
-    "seed:run": "cd ./src/database/sequelize &&sequelize-cli db:seed:all"
+    "seed:run": "cd ./src/database/sequelize &&sequelize-cli db:seed:all",
+    "test": "jest",
+    "test-cover": "jest --coverage"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.1",
     "@types/node": "^18.15.9",
+    "@types/supertest": "^2.0.12",
+    "jest": "^29.5.0",
     "sequelize-cli": "^6.6.0",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.2"
   },
