--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,11 +3,13 @@ version: "3.8"
 #uncomment all volume-related lines to update code live
 services:
   frontend:
-    depends_on:
-      - backend
+    # depends_on:
+    #   - backend
     build: ./frontend
     ports:
       - 3000:3000
+    environment:
+      - REACT_APP_BASE_API=http://localhost:8000/
     # volumes:
     #   - ./frontend:/app
 
